--- a/settings.html
+++ b/settings.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="popup.css">
   <style>
     body {
@@ -23,6 +25,7 @@
       margin-bottom: 10px;
     }
   </style>
+  <title>Settings</title>
 </head>
 <body>
   <div id="content">
