--- a/popup.html
+++ b/popup.html
@@ -9,11 +9,15 @@
 <body>
   <div id="content">
     <h1>Website Summarizer</h1>
-    <button id="summarize-btn">Summarize</button>
-    <button id="preview-btn">Preview Text</button>
-    <button id="clear-btn">Clear Text</button>
-    <div id="summary"></div>
-    <div id="preview"></div>
+    <div id="buttons">
+      <button id="summarize-btn">Summarize</button>
+      <button id="preview-btn">Preview Text</button>
+      <button id="clear-btn">Clear Text</button>
+    </div>
+    <div id="output">
+      <div id="summary"></div>
+      <div id="preview"></div>
+    </div>
     <h2>History</h2>
     <div id="history"></div>
     <a href="settings.html" target="_blank">Settings</a>
